--- a/layout.html
+++ b/layout.html
@@ -10,9 +10,9 @@
   <script src="raduiken.js" type="text/javascript"></script>
 
   <script>
-    var json_grid = {'head':['Primeira coluna','Segunda','Terceira','Quarta'],
-                     'body':[['Conteúdo um', 'Conteúdo outro', 'Mais um conteúdo', 'E este também'],
-                     ['Segundo Conteúdo', 'Conteúdo outro', 'Mais um conteúdo', 'E este também']]};
+    var json_grid = {'head':{'primeira':'Primeira coluna','segunda':'Segunda','terceira':'Terceira','quarta':'Quarta'},
+                     'body':[{'id':'1','cols':['Conteúdo um', 'Conteúdo outro', 'Mais um conteúdo', 'E este também']},
+                             {'id':'2','cols':['Segundo Conteúdo', 'Conteúdo outro', 'Mais um conteúdo', 'E este também']}]};
     
     $(document).ready(function() {
       $('.grid').fillGrid(json_grid);
