Carrega conteúdo de tab via ajax

--- a/layout.html
+++ b/layout.html
@@ -47,7 +47,7 @@
       <div id='firsttab' class='tab' title='First tab'>
         First tab
       </div>
-      <div id='secondtab' class='tab' title='Second tab'>
+      <div id='secondtab' load='Especificacao.txt' class='tab' title='Second tab'>
         Second tab
       </div>
     </div>
