--- a/layout.html
+++ b/layout.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="raduiken.css" type="text/css">
   <script src="jquery-1.4.4.min.js" type="text/javascript"></script>
   <script src="jquery-ui-1.8.6.custom.min.js" type="text/javascript"></script>
+  <script src="json2.js" type="text/javascript"></script>
   <script src="raduiken.js" type="text/javascript"></script>
 
   <script>
