Trabalhando na serialização da grid

--- a/layout.html
+++ b/layout.html
@@ -21,7 +21,7 @@
   </script>
 </head>
 <body>
-  <div class='window' title='Título da janela' style='width: 700px' drag='true' close-button='true'>
+  <div class='window' title='Título da janela' style='width: 700px' drag='false' close-button='true'>
     <ul class='menu'>
       <li><a href=''>Menu 1</a></li>
       <li><a href=''>Menu segundo</a></li>
