--- a/layout.html
+++ b/layout.html
@@ -21,7 +21,7 @@
   </script>
 </head>
 <body>
-  <div class='window' title='Título da janela' style='width: 700px' drag='false' close-button='true'>
+  <div class='window' title='Título da janela' style='width: 700px'>
     <ul class='menu'>
       <li><a href=''>Menu 1</a></li>
       <li><a href=''>Menu segundo</a></li>
@@ -60,6 +60,37 @@
       <input type="submit" value="Enviar">
       <button>Apagar</button>  
     </form>
+  </div>
+  <div class='window' style='width: 300px'>
+    <!--lorem-->
+    <p>Aliquet dolor felis at lorem. Pellentesque et lacus. Vestibulum tempor
+    lectus at est. Pellentesque habitant morbi tristique senectus et netus et
+    malesuada fames ac turpis egestas. Sed vitae eros. Nulla pulvinar turpis eget
+    nunc. Sed bibendum pellentesque nunc. Integer tristique, lorem ac faucibus
+    tempor, lorem dolor mollis turpis, a consectetuer nunc justo ac nisl.</p>
+
+    <p>Nam vitae purus. Cum sociis natoque penatibus et magnis dis parturient
+    montes, nascetur ridiculus mus. Praesent semper magna. In eu justo. Nunc vitae
+    risus nec sem scelerisque consequat. In hac habitasse platea dictumst. Nam
+    posuere ultricies turpis. Pellentesque a pede. Duis sed tortor. Phasellus
+    egestas porta lectus. Aliquam.</p>
+    <!--/lorem-->
+  </div>
+  <div class='killfloat'></div>
+  <div class='window' title='Atributes and other things'>
+    <p>Aliquet dolor felis at lorem. Pellentesque et lacus. Vestibulum tempor
+    lectus at est. Pellentesque habitant morbi tristique senectus et netus et
+    malesuada fames ac turpis egestas. Sed vitae eros. Nulla pulvinar turpis eget
+    nunc. Sed bibendum pellentesque nunc. Integer tristique, lorem ac faucibus
+    tempor, lorem dolor mollis turpis, a consectetuer nunc justo ac nisl.</p>
+    <div class='grid'>
+      <table></table>
+    </div>
+    <p>Nam vitae purus. Cum sociis natoque penatibus et magnis dis parturient
+    montes, nascetur ridiculus mus. Praesent semper magna. In eu justo. Nunc vitae
+    risus nec sem scelerisque consequat. In hac habitasse platea dictumst. Nam
+    posuere ultricies turpis. Pellentesque a pede. Duis sed tortor. Phasellus
+    egestas porta lectus. Aliquam.</p>
   </div>
 </body>
 </html>
