--- a/layout.html
+++ b/layout.html
@@ -21,7 +21,7 @@
   </script>
 </head>
 <body>
-  <div class='window' title='Título da janela' style='width: 700px'>
+  <div class='window' title='Título da janela' style='width: 70%'>
     <ul class='menu'>
       <li><a href=''>Menu 1</a></li>
       <li><a href=''>Menu segundo</a></li>
@@ -61,7 +61,7 @@
       <button>Apagar</button>  
     </form>
   </div>
-  <div class='window' style='width: 300px'>
+  <div class='window' style='width: 20%'>
     <!--lorem-->
     <p>Aliquet dolor felis at lorem. Pellentesque et lacus. Vestibulum tempor
     lectus at est. Pellentesque habitant morbi tristique senectus et netus et
