Form fields div, and float

--- a/layout.html
+++ b/layout.html
@@ -57,6 +57,11 @@
       <input type='text' title='Nome completo' id='nome'>
       <input type='text' title='Sua senha' id='password'>
       <input type="checkbox" title="Cheque as coisas" id='checa'>
+      <div class='killfloat'></div>
+      <input type='text' title='Nome completo' id='nome'>
+      <input type='text' title='Sua senha' id='password'>
+      <input type="checkbox" title="Cheque as coisas" id='checa'>
+      <div class='killfloat'></div>
       <input type="submit" value="Enviar">
       <button>Apagar</button>  
     </form>
@@ -76,7 +81,6 @@
     egestas porta lectus. Aliquam.</p>
     <!--/lorem-->
   </div>
-  <div class='killfloat'></div>
   <div class='window' title='Atributes and other things'>
     <p>Aliquet dolor felis at lorem. Pellentesque et lacus. Vestibulum tempor
     lectus at est. Pellentesque habitant morbi tristique senectus et netus et
