--- a/layout.html
+++ b/layout.html
@@ -22,7 +22,7 @@
 </head>
 <body>
   <h1 class='center'>RADUIKEN - Rapid Application Development User Interface and Wathever</h1>
-  <div class='window' title='Simple examples'>
+  <div class='window' title='Simple examples' style='width: 500px'>
     <ul class='menu'>
       <li><a href=''>File</a></li>
       <li><a href=''>Edit</a></li>
@@ -89,5 +89,6 @@
     posuere ultricies turpis. Pellentesque a pede. Duis sed tortor. Phasellus
     egestas porta lectus. Aliquam.</p>
   </div>
+  <div class='killfloat'></div>
 </body>
 </html>
