--- a/layout.html
+++ b/layout.html
@@ -6,7 +6,7 @@
   <title>Raduiken</title>
   <link rel="stylesheet" href="raduiken.css" type="text/css">
   <script src="jquery-1.4.4.min.js" type="text/javascript"></script>
-  <script src="jquery-serializeForm.min.js" type="text/javascript"></script>
+  <script src="jquery-toObject.min.js" type="text/javascript"></script>
   <script src="raduiken.js" type="text/javascript"></script>
 
   <script>
