Pequenas alterações nas funções

--- a/layout.html
+++ b/layout.html
@@ -20,6 +20,12 @@
   </script>
 </head>
 <body>
+  <ul class='menu'>
+    <li><a href=''>File</a></li>
+    <li><a href=''>Edit</a></li>
+    <li><a href=''>Tools</a></li>
+    <li><a href=''>Help</a></li>
+  </ul>
   <h1 class='center'>RADUIKEN - Rapid Application Development User Interface and Wathever</h1>
   <div class='window' title='Simple examples' style='width: 500px'>
     <ul class='menu'>
