--- a/layout.html
+++ b/layout.html
@@ -5,8 +5,8 @@
 
   <title>Raduiken</title>
   <link rel="stylesheet" href="raduiken.css" type="text/css">
-  <script src="jquery-1.4.4.min.js" type="text/javascript"></script>
-  <script src="jquery-toObject.min.js" type="text/javascript"></script>
+  <script src="jquery-1.4.4.js" type="text/javascript"></script>
+  <script src="jquery-objective.js" type="text/javascript"></script>
   <script src="raduiken.js" type="text/javascript"></script>
 
   <script>
@@ -44,6 +44,14 @@
         <li class='right'><a href=''>Refresh</a></li>
       </ul>
     </div>
+    <table id="agride">
+      <tbody>
+        <tr name='linha1'><td name='coluna1'>Primeira</td><td name='coluna2'><input name='valor' value='Input de segunda'></td></tr>
+        <tr name='linha2'><td name='coluna1'>Primeira</td><td>Segunda</td></tr>
+        <tr name='linha3'><td>Primeira</td><td>Segunda</td></tr>
+        <tr><td>Primeira</td><td>Segunda</td></tr>
+      </tbody>
+    </table>
     <br>
     <div class='tabs'>
       <div id='firsttab' class='tab' title='First tab'>
@@ -55,12 +63,12 @@
     </div>
     <br>
     <form>
-      <input type='text' title='Your name' id='name'>
-      <input type='password' title='Password' id='password'>
-      <input type="checkbox" title="Yes, I agree" id='agree'>
+      <input type='text' title='Your name' name='name'>
+      <input type='password' title='Password' name='password'>
+      <input type="checkbox" title="Yes, I agree" name='agree'>
       <div class='killfloat'></div>
-      <input type='text' title='Street' id='street'>
-      <input type='text' title='Country' id='country'>
+      <input type='text' title='Street' name='street'>
+      <input type='text' title='Country' name='country'>
       <select title='Any option?' name='options' multiple>
         <option>First option, or not</option>
         <option>Other option for you and me</option>
