--- a/layout.html
+++ b/layout.html
@@ -4,10 +4,10 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
   <title>Raduiken</title>
-  <link rel="stylesheet" href="raduiken.css" type="text/css">
+  <link rel="stylesheet" href="raduiken-0.1.css" type="text/css">
   <script src="jquery-1.4.4.min.js" type="text/javascript"></script>
   <script src="jquery-objective.js" type="text/javascript"></script>
-  <script src="raduiken.js" type="text/javascript"></script>
+  <script src="raduiken-0.1.js" type="text/javascript"></script>
 
   <script>
     var json_grid = {'head':{'first':'First column','second':'Second','third':'Third','fourth':'Fourth'},
@@ -27,7 +27,7 @@
     <li><a href=''>Help</a></li>
   </ul>
   <h1 class='center'>RADUIKEN - Rapid Application Development User Interface and Wathever</h1>
-  <div class='window' title='Simple examples' style='width: 500px'>
+  <div class='window' title='Simple examples' style='width: 500px' name='janela'>
     <ul class='menu'>
       <li><a href=''>File</a></li>
       <li><a href=''>Edit</a></li>
@@ -47,25 +47,10 @@
     <table id="agride" name='grid'>
       <tbody>
         <tr name='linha1'><td name='coluna1'>Primeira</td><td name='coluna2'><input name='valor' value='Input de segunda'></td></tr>
-        <tr name='linha2'><td name='colunae'><b>Primeira</b></td><td>Segunda</td></tr>
+        <tr name='linha2'><td name='coluna1'><b>Primeira</b></td><td>Segunda</td></tr>
         <tr name='linha3'><td>Primeira</td><td>Segunda</td></tr>
         <tr name='linha4'><td>Primeira</td>
-          <td>
-            <form id='formu' name='formulario'>
-              <input type='text' title='Your name' name='name'>
-              <input type='password' title='Password' name='password'>
-              <input type="checkbox" title="Yes, I agree" name='agree'>
-              <div class='killfloat'></div>
-              <input type='text' title='Street' name='street'>
-              <input type='text' title='Country' name='country'>
-              <select title='Any option?' name='options' multiple>
-                <option>First option, or not</option>
-                <option>Other option for you and me</option>
-              </select>
-              <div class='killfloat'></div>
-              <input type="submit" value="Send">
-              <button>Clear</button>  
-            </form>
+          <td>segs
           </td>
         </tr>
       </tbody>
