--- a/layout.html
+++ b/layout.html
@@ -4,107 +4,106 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
   <title>Raduiken</title>
-  <link rel="stylesheet" href="raduiken-0.1.css" type="text/css">
-  <script src="jquery-1.4.4.min.js" type="text/javascript"></script>
-  <script src="jquery-objective.js" type="text/javascript"></script>
-  <script src="raduiken-0.1.js" type="text/javascript"></script>
+  
+  <link rel="stylesheet" href="layout.css" type="text/css">
+  <link rel="icon" href="favicon.ico"> 
 
-  <script>
-    var json_grid = {'head':{'first':'First column','second':'Second','third':'Third','fourth':'Fourth'},
-                     'body':[{'id':'1','cols':['Content one', 'Other content', 'One more', 'This too']},
-                             {'id':'2','cols':['Second line', 'Yes, second', 'More column', 'Last column']}]};
-    
-    $(document).ready(function() {
-      $('.grid').fillGrid(json_grid);
-    });
-  </script>
+  <script src="jquery-1.5.1.min.js" type="text/javascript"></script>
 </head>
 <body>
-  <ul class='menu'>
-    <li><a href=''>File</a></li>
-    <li><a href=''>Edit</a></li>
-    <li><a href=''>Tools</a></li>
-    <li><a href=''>Help</a></li>
-  </ul>
-  <h1 class='center'>RADUIKEN - Rapid Application Development User Interface and Wathever</h1>
-  <div class='window' title='Simple examples' style='width: 500px' name='janela'>
-    <ul class='menu'>
-      <li><a href=''>File</a></li>
-      <li><a href=''>Edit</a></li>
-      <li><a href=''>Tools</a></li>
-      <li><a href=''>Help</a></li>
-    </ul>
-    <p>Some informations, help, or introduction. Plain text.</p>
-    <div class='grid'>
-      <table></table>
-      <ul class="toolbar">
-        <li><button><< Previous</button></li>
-        <li><input type="text" size="2" value="1"></li>
-        <li><button>Next >></button></li>
-        <li class='right'><a href=''>Refresh</a></li>
-      </ul>
-    </div>
-    <table id="agride" name='grid'>
-      <tbody>
-        <tr name='linha1'><td name='coluna1'>Primeira</td><td name='coluna2'><input name='valor' value='Input de segunda'></td></tr>
-        <tr name='linha2'><td name='coluna1'><b>Primeira</b></td><td>Segunda</td></tr>
-        <tr name='linha3'><td>Primeira</td><td>Segunda</td></tr>
-        <tr name='linha4'><td>Primeira</td>
-          <td>segs
-          </td>
-        </tr>
-      </tbody>
-    </table>
-    <br>
-    <div class='tabs'>
-      <div id='firsttab' class='tab' title='First tab'>
-        First tab
-      </div>
-      <div id='secondtab' load='Especificacao.txt' class='tab' title='Second tab'>
-        Second tab
-      </div>
-    </div>
-    <br>
-    <form id='formulario' name='formulario'>
-      <input type='text' title='Your name' name='name'>
-      <input type='password' title='Password' name='password'>
-      <input type="checkbox" title="Yes, I agree" name='agree'>
-      <div class='killfloat'></div>
-      <input type='text' title='Street' name='street'>
-      <input type='text' title='Country' name='country'>
-      <select title='Any option?' name='options' multiple>
-        <option>First option, or not</option>
-        <option>Other option for you and me</option>
-      </select>
-      <div class='killfloat'></div>
-      <input type="submit" value="Send">
-      <button>Clear</button>  
-    </form>
-  </div>
-  <div class='window' style='width: 20%'>
-    <p>Aliquet dolor felis at lorem. Pellentesque et lacus. Vestibulum tempor
-    lectus at est. Pellentesque habitant morbi tristique senectus et netus et
-    malesuada fames ac turpis egestas. Sed vitae eros. Nulla pulvinar turpis eget
-    nunc. Sed bibendum pellentesque nunc. Integer tristique, lorem ac faucibus
-    tempor, lorem dolor mollis turpis, a consectetuer nunc justo ac nisl.</p>
-    <p>Nam vitae purus. Cum sociis natoque penatibus et magnis dis parturient
-    montes, nascetur ridiculus mus. Praesent semper magna. In eu justo. Nunc vitae
-    risus nec sem scelerisque consequat. In hac habitasse platea dictumst. Nam
-    posuere ultricies turpis. Pellentesque a pede. Duis sed tortor. Phasellus
-    egestas porta lectus. Aliquam.</p>
-  </div>
-  <div class='window' title='Atributes and other things'>
-    <p>Aliquet dolor felis at lorem. Pellentesque et lacus. Vestibulum tempor
-    lectus at est. Pellentesque habitant morbi tristique senectus et netus et
-    malesuada fames ac turpis egestas. Sed vitae eros. Nulla pulvinar turpis eget
-    nunc. Sed bibendum pellentesque nunc. Integer tristique, lorem ac faucibus
-    tempor, lorem dolor mollis turpis, a consectetuer nunc justo ac nisl.</p>
-    <p>Nam vitae purus. Cum sociis natoque penatibus et magnis dis parturient
-    montes, nascetur ridiculus mus. Praesent semper magna. In eu justo. Nunc vitae
-    risus nec sem scelerisque consequat. In hac habitasse platea dictumst. Nam
-    posuere ultricies turpis. Pellentesque a pede. Duis sed tortor. Phasellus
-    egestas porta lectus. Aliquam.</p>
-  </div>
-  <div class='killfloat'></div>
+  <table class='panels' cellspacing='5'> <!-- Table? Infelizmente, para panels é a melhor coisa! -->
+    <tr>
+      <td colspan='2' style='height: 77px'>
+        <div id="top">
+          <div id="user">
+            <a href="http://www.gogs.com.br"><b>henriquegogo</b></a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
+            <a href="http://www.gogs.com.br">documentação</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
+            <a href="http://www.gogs.com.br">sair</a>
+          </div>
+          <h1>
+            Raduiken 0.2
+          </h1>
+        </div>
+        <ul class="menu horizontal">
+          <li><a href="#">Inicial</a></li>
+          <li><a href="#">Configurações</a>
+            <ul>
+              <li><a href="#">Nada</a></li>
+              <li><a href="#">Além das coisas</a></li>
+              <li><a href="#">Rotineiras</a></li>
+            </ul>
+          </li>
+          <li><a href="#">Relatórios</a></li>
+          <li class="right"><a href="#">Ajuda</a></li>
+          <li class="right"><a href="#">Usuário</a></li>
+        </ul>
+      </td>
+    </tr>
+    <tr>
+      <td class="menu vertical" style='width: 300px'>
+        <div class="bar">
+          <b>Barra de ferramentas ou outras opções</b>
+        </div>
+        <ul class="menu vertical">
+          <li><a href="#">Item do menu cara</a></li>
+          <li><a href="#">Mais um</a></li>
+          <li><a href="#">Item do menu cara</a></li>
+          <li><a href="#">Outro item</a></li>
+          <li><a href="#">Item do menu cara</a></li>
+        </ul>
+        <div class="bar">
+          <b>Mais uma barra, se assim convir</b>
+        </div>
+          <ul class="menu vertical">
+            <li><a href="#">Item do menu cara</a></li>
+            <li><a href="#">Mais um</a></li>
+            <li><a href="#">Item do menu cara</a></li>
+            <li><a href="#">Outro item</a></li>
+            <li><a href="#">Item do menu cara</a></li>
+          </ul>
+        <div class="bar">
+          <b>E outra barra, se quiser</b>
+        </div>
+        <ul class="menu vertical">
+          <li><a href="#">Item do menu cara</a></li>
+          <li><a href="#">Mais um</a></li>
+          <li><a href="#">Item do menu cara</a></li>
+          <li><a href="#">Outro item</a></li>
+          <li><a href="#">Item do menu cara</a></li>
+        </ul>
+      </td>
+      <!-- <td class="content"> --> <!-- Quando não for abas, for só conteúdo, pode colocar só content -->
+      <td class="tabs">
+        <ul class="tabbar">
+          <li class="active"><a href="#firsttab">First tab</a></li>
+          <li><a href="#secondtab" load="Especificacao.txt">Second tab</a></li>
+        </ul>
+        <div id="firsttab" class="content" style="display: block; ">
+          First tab
+        </div>
+        <div id="secondtab" class="content" style="display: none; ">
+          Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab
+        </div>
+      </td>
+    </tr>
+    <tr>
+      <td id="bottom" colspan='2'>Sistema desenvolvido por <a href="http://www.gogs.com.br">Henrique Gogó</a>. Este é um serviço que está em contante aprimoramento. Qualquer dúvida ou sugestão, entre em contato.</td>
+    </tr>
+  </table>
 </body>
+<script>
+$(document).ready(function() {
+  /* Tabs */
+  $.each($('.tabs'), function() {
+    $('.tabbar li a', this).click(function() {
+      $('li',$(this).parent().parent()).removeClass('active');
+      $($(this).parent()).addClass('active');
+      $('div.content',$(this).parent().parent().parent()).hide();
+      $($(this).attr('href')).show();
+      $($(this).attr('href')).load($(this).attr('load'));
+      return false;
+    });
+  });
+});
+</script>
 </html>
