--- a/layout.html
+++ b/layout.html
@@ -6,101 +6,220 @@
   <title>Raduiken</title>
   
   <link rel="stylesheet" href="layout.css" type="text/css">
+  <link rel="stylesheet" href="jquery-ui.css" type="text/css">
+  <link rel="stylesheet" href="jquery.treeview.css" type="text/css">
   <link rel="icon" href="favicon.ico"> 
 
   <script src="jquery-1.5.1.min.js" type="text/javascript"></script>
+  <script src="jquery-ui-latest.js" type="text/javascript"></script>
+  <script src="jquery.layout-latest.js" type="text/javascript"></script>
+  <script src="jquery.treeview.pack.js" type="text/javascript"></script>
 </head>
 <body>
-  <table class='panels' cellspacing='5'> <!-- Table? Infelizmente, para panels é a melhor coisa! -->
-    <tr>
-      <td colspan='2' style='height: 77px'>
-        <div id="top">
-          <div id="user">
-            <a href="http://www.gogs.com.br"><b>henriquegogo</b></a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
-            <a href="http://www.gogs.com.br">documentação</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
-            <a href="http://www.gogs.com.br">sair</a>
-          </div>
-          <h1>
-            Raduiken 0.2
-          </h1>
-        </div>
-        <ul class="menu horizontal">
-          <li><a href="#">Inicial</a></li>
-          <li><a href="#">Configurações</a>
+  <div class="ui-layout-north" onmouseover="layout.allowOverflow(this)" onmouseout="layout.resetOverflow(this)">
+    <div id="top">
+      <div id="user">
+        <a href="http://www.gogs.com.br"><b>henriquegogo</b></a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
+        <a href="http://www.gogs.com.br">documentação</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
+        <a href="http://www.gogs.com.br">sair</a>
+      </div>
+      <h1>
+        Your name
+      </h1>
+    </div>
+    <ul class="menu horizontal">
+      <li><a href="#">Inicial</a></li>
+      <li><a href="#">Configurações</a>
+        <ul>
+          <li><a href="#">Nada</a></li>
+          <li><a href="#">Além das coisas</a></li>
+          <li><a href="#">Rotineiras</a></li>
+        </ul>
+      </li>
+      <li><a href="#">Relatórios</a></li>
+      <li class="right"><a href="#" class="icon help">Ajuda</a></li>
+      <li class="right"><a href="#" class="icon money disabled">Financeiro</a></li>
+      <li class="right"><a href="#" class="icon money">Financeiro</a></li>
+    </ul>
+  </div>
+  <div id="menus" class="ui-layout-west">
+    <div class="bar">
+      <b>Barra de ferramentas ou outras opções</b>
+    </div>
+    <ul class="menu vertical">
+      <li><a href="#">Item do menu cara</a></li>
+      <li><a href="#">Mais um</a>
+        <ul>
+          <li><a href="#">Nada</a></li>
+          <li><a href="#">Além das coisas</a>
             <ul>
               <li><a href="#">Nada</a></li>
-              <li><a href="#">Além das coisas</a></li>
+              <li><a href="#">Além das coisas</a>
+                <ul>
+                  <li><a href="#">Nada</a></li>
+                  <li><a href="#">Além das coisas</a></li>
+                  <li><a href="#">Rotineiras</a></li>
+                </ul>
+              </li>
               <li><a href="#">Rotineiras</a></li>
             </ul>
           </li>
-          <li><a href="#">Relatórios</a></li>
-          <li class="right"><a href="#">Ajuda</a></li>
-          <li class="right"><a href="#">Usuário</a></li>
+          <li><a href="#">Rotineiras</a></li>
         </ul>
-      </td>
-    </tr>
-    <tr>
-      <td class="menu vertical" style='width: 300px'>
-        <div class="bar">
-          <b>Barra de ferramentas ou outras opções</b>
-        </div>
-        <ul class="menu vertical">
-          <li><a href="#">Item do menu cara</a></li>
-          <li><a href="#">Mais um</a></li>
-          <li><a href="#">Item do menu cara</a></li>
-          <li><a href="#">Outro item</a></li>
-          <li><a href="#">Item do menu cara</a></li>
+      </li>
+      <li><a href="#">Item do menu cara</a></li>
+      <li><a href="#">Outro item</a></li>
+      <li><a href="#">Item do menu cara</a></li>
+    </ul>
+    <div class="bar">
+      <b>Mais uma barra, se assim convir</b>
+    </div>
+    <ul class="menu vertical">
+      <li><a href="#">Item do menu cara</a></li>
+      <li><a href="#">Mais um</a>
+        <ul>
+          <li><a href="#">Nada</a></li>
+          <li><a href="#">Além das coisas</a>
+            <ul>
+              <li><a href="#">Nada</a></li>
+              <li><a href="#">Além das coisas</a>
+                <ul>
+                  <li><a href="#">Nada</a></li>
+                  <li><a href="#">Além das coisas</a></li>
+                  <li><a href="#">Rotineiras</a></li>
+                </ul>
+              </li>
+              <li><a href="#">Rotineiras</a></li>
+            </ul>
+          </li>
+          <li><a href="#">Rotineiras</a></li>
         </ul>
-        <div class="bar">
-          <b>Mais uma barra, se assim convir</b>
-        </div>
-          <ul class="menu vertical">
-            <li><a href="#">Item do menu cara</a></li>
-            <li><a href="#">Mais um</a></li>
-            <li><a href="#">Item do menu cara</a></li>
-            <li><a href="#">Outro item</a></li>
-            <li><a href="#">Item do menu cara</a></li>
-          </ul>
-        <div class="bar">
-          <b>E outra barra, se quiser</b>
-        </div>
-        <ul class="menu vertical">
-          <li><a href="#">Item do menu cara</a></li>
-          <li><a href="#">Mais um</a></li>
-          <li><a href="#">Item do menu cara</a></li>
-          <li><a href="#">Outro item</a></li>
-          <li><a href="#">Item do menu cara</a></li>
-        </ul>
-      </td>
-      <!-- <td class="content"> --> <!-- Quando não for abas, for só conteúdo, pode colocar só content -->
-      <td class="tabs">
-        <ul class="tabbar">
-          <li class="active"><a href="#firsttab">First tab</a></li>
-          <li><a href="#secondtab" load="Especificacao.txt">Second tab</a></li>
-        </ul>
-        <div id="firsttab" class="content" style="display: block; ">
-          First tab
-        </div>
-        <div id="secondtab" class="content" style="display: none; ">
-          Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab
-        </div>
-      </td>
-    </tr>
-    <tr>
-      <td id="bottom" colspan='2'>Sistema desenvolvido por <a href="http://www.gogs.com.br">Henrique Gogó</a>. Este é um serviço que está em contante aprimoramento. Qualquer dúvida ou sugestão, entre em contato.</td>
-    </tr>
-  </table>
+      </li>
+      <li><a href="#">Item do menu cara</a></li>
+      <li><a href="#">Outro item</a></li>
+      <li><a href="#">Item do menu cara</a></li>
+    </ul>
+    <div class="bar">
+      <b>E outra barra, se quiser</b>
+    </div>
+    <ul class="menu vertical">
+      <li><a href="#">Item do menu cara</a></li>
+      <li><a href="#">Mais um</a></li>
+      <li><a href="#">Item do menu cara</a></li>
+      <li><a href="#">Outro item</a></li>
+      <li><a href="#">Item do menu cara</a></li>
+    </ul>
+  </div>
+  <!-- <div class="content"> --> <!-- Quando não for abas, for só conteúdo, pode colocar só content -->
+  <div class="tabs ui-layout-center">
+    <ul class="tabbar">
+      <li class="more"><img src="images/more.gif"></li>
+      <li><a href="#formstab">Forms <img src="images/minus.gif"></a></li>
+      <li><a href="#secondtab">Second tab <img src="images/minus.gif"></a></li>
+    </ul>
+    <div id="formstab" class="content">
+      <form action="" method="post" enctype="application/x-www-form-urlencoded">
+        <dl class="zend_form">
+          <dt id="form_segmento_loja_cliente-label">&nbsp;</dt>
+          <dd id="form_segmento_loja_cliente-element">
+          <fieldset id="fieldset-form_segmento_loja_cliente">
+            <legend>Informations personnelles</legend>
+            <dl>
+              <dt><label for="data">Data</label></dt>                
+              <dd>
+                <input type="text" id="data" class="datepicker">
+                <ul class="errors"><li>Este campo e obrigatorio</li></ul>
+              </dd>
+
+              <dt><label id="checkbox">Checkbox</label></dt>
+              <dd>
+                <input id="checkbox" type="checkbox">
+              </dd>
+
+              <dt><label for="textarea">Textarea</label></dt>
+              <dd>
+                <textarea id="textarea"></textarea>
+              </dd>
+
+              <dt><label for="select">Listbox</label></dt>
+              <dd>
+                <select id="select" multiple size='5'>
+                  <option>Primeiro item</option>
+                  <option>Segundo item</option>
+                  <option>Terceiro item</option>
+                  <option>Quarto item</option>
+                  <option>Quinto item</option>
+                  <option>Sexto item</option>
+                  <option>Sétimo item</option>
+                  <option>Oitavo item</option>
+                </select>
+              </dd>
+
+              <dt><label for="input">Input</label></dt>
+              <dd>
+                <input type="text" id="input">
+                <ul class="errors"><li>Este campo e obrigatorio</li></ul>
+              </dd>
+
+              <dt>&nbsp;</dt>
+              <dd>
+                <input type="submit" value="Consultar">
+                <input type="button" value="Limpar">
+              </dd>
+
+            </dl>
+          </fieldset>
+          </dd>
+        </dl>
+      </form>
+    </div>
+    <div id="secondtab" class="content">
+      Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab<br>Second tab
+    </div>
+  </div>
+  <div id="bottom" class="ui-layout-south">Sistema desenvolvido por <a href="http://www.gogs.com.br">Polibrás</a>. Este é um serviço que está em contante aprimoramento. Qualquer dúvida ou sugestão, entre em contato.</div>
 </body>
 <script>
+var layout;
 $(document).ready(function() {
+  $(".menu.vertical").treeview({ collapsed: true });
+  layout = $("body").layout({ applyDefaultStyles: true
+    , north__spacing_open: 0
+    , south__spacing_open: 0
+    , west__size: 300
+  });
+  /* Menu vertical */
+  $("#menus .bar").click(function() {
+    $("b", this).toggleClass('closed');
+    $(this).next().toggle('slow');
+  });
+  $(".datepicker").datepicker();
   /* Tabs */
   $.each($('.tabs'), function() {
-    $('.tabbar li a', this).click(function() {
+    $('.tabbar li.more img').click(function() {
+      $("ul", $(this).parent().parent().parent()).append("<li><a href='#novaaba'>Nova aba <img src='images/minus.gif'></a></li>");
+      $(".tabs", $(this).parent().parent().parent().parent()).append("<div id='novaaba' class='content' style='display: none'>Nova aba</div>");
+    });
+    $('.tabbar li a', this).live('click', function() {
       $('li',$(this).parent().parent()).removeClass('active');
       $($(this).parent()).addClass('active');
       $('div.content',$(this).parent().parent().parent()).hide();
       $($(this).attr('href')).show();
       $($(this).attr('href')).load($(this).attr('load'));
+      return false;
+    });
+    $('.tabbar li a img', this).live('click', function() {
+      var id_div = $(this).parent().attr('href');
+      $(this).parent().parent().remove();
+      $('li',$(this).parent().parent().parent()).removeClass('active');
+      $("div"+id_div+".content").remove();
+      return false;
+    });
+  });
+  /* Menus */
+  $.each($('.menu.vertical'), function() {
+    $('li', this).click(function() {
+      $(this).toggleClass('active');
       return false;
     });
   });
