--- a/guiga/index.html
+++ b/guiga/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
-  <title>Agnostic</title>
+  <title>jQuery Guiga</title>
   
   <script src="jquery-1.6.1.min.js" type="text/javascript"></script>
-  <script src="agnostemplate.js" type="text/javascript"></script>
+  <script src="guiga.js" type="text/javascript"></script>
 </head>
 <body>
   
