Using attributes as variables on widgets - Needs to work in just one request

--- a/exemplo.html
+++ b/exemplo.html
@@ -5,10 +5,10 @@
 
   <title>Guiga</title>
   <style>
-    .widget, section {
+    widget, section {
       float: left;
     }
-    .widget label {
+    widget label {
       display: block;
     }
     br {
@@ -19,17 +19,17 @@
 <body>
   <form>
     <section>
-      <widget type="input" name="busca" data-label="Busca"></widget>
-      <widget type="input" name="qualquercoisa" data-label="Qualquer coisa"></widget>
+      <widget type="input" name="busca" label="Busca"></widget>
+      <widget type="input" name="qualquercoisa" label="Qualquer coisa"></widget>
     </section>
     <br>
     <section>
-      <widget type="input" name="nome" data-label="Primeiro nome"></widget>
+      <widget type="input" name="nome" label="Primeiro nome"></widget>
       <br>
-      <widget type="input" name="sobrenome" data-label="Sobrenome"></widget>
+      <widget type="input" name="sobrenome" label="Sobrenome"></widget>
     </section>
     <section>
-      <widget type="textarea" height="400" data-label="Adonde"></widget>
+      <widget type="textarea" height="400" label="Adonde"></widget>
     </section>
     <br>
     <input type="submit">
@@ -37,11 +37,42 @@
 </body>
 <script src="jquery.js" type="text/javascript"></script>
 <script>
+;(function($) {
+  var viewpower = function (str, data){
+    var fn = new Function("obj",
+      "var p=[],print=function(){p.push.apply(p,arguments);};" +
+      "with(obj){p.push('" +
+
+      str.replace(/[\r\t\n]/g, " ")
+         .split("{{").join("\t")
+         .replace(/((^|}})[^\t]*)'/g, "$1\r")
+         .replace(/\t=(.*?)}}/g, "',$1,'")
+         .split("\t").join("');")
+         .split("}}").join("p.push('")
+         .split("\r").join("\\'")
+         + "');}return p.join('');");
+
+    return fn(data);
+  };
+
   $.each($('widget'), function() {
     var type = $(this).attr('type');
 
-    $(this).load('widgets.html #' + type + ' *', function() {
+    $(this).load('widgets.html [data-widget=' + type + ']', function() {
+      var attributes = this.attributes;
+      var data = {};
+
+      for (var i in attributes) {
+        if (attributes[i].value)
+          data[attributes[i].name] = attributes[i].value;
+      }
+
+      var interpolated = viewpower( $(this).html(), data );
+
+      $(this).replaceWith(interpolated);
     });
   });
+
+})(jQuery);
 </script>
 </html>
