--- a/widgets.html
+++ b/widgets.html
@@ -1,9 +1,9 @@
-<widget id="input">
-  <label>Isso é só um input</label>
+<div data-widget="input">
+  <label>{{= label }}</label>
   <input type="text">
-</widget>
+</div>
 
-<widget id="textarea">
-  <label>Isso é um campo de texto</label>
+<div data-widget="textarea">
+  <label>{{= label }}</label>
   <textarea></textarea>
-</widget>
+</div>
