--- a/widgets.html
+++ b/widgets.html
@@ -1,9 +1,13 @@
-<div data-widget="input">
+<widgets>
+
+<div data-widget="input" class="field">
   <label>{{= label }}</label>
   <input type="text">
 </div>
 
-<div data-widget="textarea">
+<div data-widget="textarea" class="field">
   <label>{{= label }}</label>
   <textarea></textarea>
 </div>
+
+</widgets>
