--- a/widgets.html
+++ b/widgets.html
@@ -2,12 +2,12 @@
 
 <div data-widget="input" class="field">
   <label>{{= label }}</label>
-  <input type="text">
+  <input type="text" value="{{= html}}">
 </div>
 
 <div data-widget="textarea" class="field">
   <label>{{= label }}</label>
-  <textarea></textarea>
+  <textarea>{{= html }}</textarea>
 </div>
 
 </widgets>
