--- a/exemplo.html
+++ b/exemplo.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
+  <script src="mustache.js" type="text/javascript"></script>
 
   <title>Guiga</title>
   <style>
@@ -34,40 +35,28 @@
       </div>
     </section>
     <br>
+    <section>
+      <div data-widget="list" data-title="Listagem de itens">
+        Esse é um textarea
+      </div>
+    </section>
+    <br>
     <input type="submit">
   </form>
 </body>
 <script src="jquery.js" type="text/javascript"></script>
 <script>
 ;(function($) {
-  var viewpower = function (str, data){
-    var fn = new Function("obj",
-      "var p=[],print=function(){p.push.apply(p,arguments);};" +
-      "with(obj){p.push('" +
-
-      str.replace(/[\r\t\n]/g, " ")
-         .split("<%").join("\t")
-         .replace(/((^|%>)[^\t]*)'/g, "$1\r")
-         .replace(/\t=(.*?)%>/g, "',$1,'")
-         .split("\t").join("');")
-         .split("%>").join("p.push('")
-         .split("\r").join("\\'")
-         + "');}return p.join('');");
-
-    return fn(data);
-  };
-
   $.get('widgets.html', function(templates) {
     $.each($('[data-widget]'), function() {
-      var widget = $('[data-widget=' + $(this).attr('data-widget') + ']', templates)[0]
-                     .outerHTML.replace(/&lt;/g, "<").replace(/&gt;/g, ">");
+      var widget = $('[data-widget=' + $(this).attr('data-widget') + ']', templates)[0].outerHTML;
 
       var data = $(this).data();
 
       data['html'] = $.trim($(this).html());
       data['element'] = $(this)[0].outerHTML;
 
-      var interpolated = viewpower( widget, data );
+      var interpolated = Mustache.to_html(widget, data);
 
       $(this).replaceWith(interpolated);
     });
