--- a/widgets.html
+++ b/widgets.html
@@ -1,19 +1,17 @@
 <widgets>
 
 <div data-widget="input" class="field">
-  <label><%= label %></label>
-  <%= element %>
+  <label>{{ label }}</label>
+  {{{ element }}}
 </div>
 
 <div data-widget="textarea" class="field">
-  <label><%= label %></label>
-  <textarea style="height: <%= height %>"><%= html %></textarea>
+  <label>{{ label }}</label>
+  <textarea style="height: {{ height }}">{{ html }}</textarea>
 </div>
 
 <ul data-widget="lista">
-  <% for () { %>
-    <li></li>
-  <% } %>
+  <li></li>
 </ul>
 
 </widgets>
