--- a/components.html
+++ b/components.html
@@ -1,4 +1,4 @@
-<script type="text/html" id="field">
+<script type="text/html" id="input">
     <div class="field">
         <label><%= label %></label>
         <input type="text" value="<%= value %>">
