--- a/index.html
+++ b/index.html
@@ -3,15 +3,10 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
     <title>KS - The King Size JavaScript Library</title>
-    
 </head>
+
 <body>
-
-<h1>Título</h1>
-<p>Parágrafo</p>
-<b class="bold">Negrito</b>
-<small class="quote">Comentário</small>
-
+    <input type="text" class="input" name="name" value="Henrique Gogó">
 </body>
 
 <script src="jquery-1.7.2.min.js" type="text/javascript"></script>
