--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
     <title>KS - The King Size JavaScript Library</title>
+    
+    <link rel="stylesheet" href="components.css" type="text/css">
 </head>
 
 <body>
