--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 
 <body>
-    <input type="text" class="input" name="name" value="Henrique Gogó">
+    <input rel="input" type="text" id="name" name="name" value="Henrique Gogó" data-label='Nome'>
+    <input rel="checkbox" type="checkbox" name="check" data-label='Assinar?'>
+    <ul rel="list" data-list="['Vida', 'Devolva', 'Minhas', 'Fantasias']">
 </body>
 
 <script src="jquery-1.7.2.min.js" type="text/javascript"></script>
