--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
-    <title>KS - The King Size JavaScript Library</title>
+    <title>Juice - JavaScript UI Component Extension</title>
     
     <link rel="stylesheet" href="components.css" type="text/css">
 </head>
@@ -14,5 +14,5 @@
 </body>
 
 <script src="jquery-1.7.2.min.js" type="text/javascript"></script>
-<script src="ks.js" type="text/javascript"></script>
+<script src="juice.js" type="text/javascript"></script>
 </html>
