--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE HTML>
 <html>
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
@@ -10,9 +11,12 @@
 <body>
     <input rel="input" type="text" id="name" name="name" value="Henrique Gogó" data-label='Nome'>
     <input rel="checkbox" type="checkbox" name="check" data-label='Assinar?'>
+    <input rel="input" type="text" id="describe" name="describe" value="Muito gatinho" data-label='Considerações'>
+    <br>
     <ul rel="list" data-list="['Vida', 'Devolva', 'Minhas', 'Fantasias']">
 </body>
 
+<script src="json2.js" type="text/javascript"></script>
 <script src="jquery-1.7.2.min.js" type="text/javascript"></script>
 <script src="juice.js" type="text/javascript"></script>
 </html>
