--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
     <input rel="checkbox" type="checkbox" name="check" data-label='Assinar?'>
     <input rel="input" type="text" id="describe" name="describe" value="Muito gatinho" data-label='Considerações'>
     <br>
-    <ul rel="list" data-list="['Vida', 'Devolva', 'Minhas', 'Fantasias']">
+    <ul rel="list" data-list="['Vida', 'Devolva', 'Minhas', 'Fantasias']"></ul>
+    <br>
+    <table rel="grid"
+        data-titles="['id', 'nome']"
+        data-rows="[[0, 'Daiane Abreu'], [1, 'Henrique Gogó']]">
+    </table>
 </body>
 
 <script src="json2.js" type="text/javascript"></script>
