--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <br>
     <table rel="grid"
         data-titles="['id', 'nome']"
-        data-rows="[[0, 'Daiane Abreu'], [1, 'Henrique Gogó']]">
+        data-rows="[[0, 'Daiane Abreu'], [1, 'Henrique Gogó']]"
+        data-actions="[{'Add': '#add'}, {'Remove': '#remove'}]">
     </table>
 </body>
 
