--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <table rel="grid"
         data-titles="['id', 'nome']"
         data-rows="[[0, 'Daiane Abreu'], [1, 'Henrique Gogó']]"
-        data-actions="[{'Add': '#add'}, {'Remove': '#remove'}]">
+        data-actions="[{'text': 'Add', 'href': '#add'}, {'text': 'Remove', 'href': '#remove'}]">
     </table>
 </body>
 
