--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
     <table rel="grid"
         data-titles="['id', 'nome']"
         data-rows="[[0, 'Daiane Abreu'], [1, 'Henrique Gogó']]"
-        data-actions="[{'text': 'Add', 'href': '#add'}, {'text': 'Remove', 'href': '#remove'}]">
+        data-actions="[{'text': 'Add', 'href': '#add', 'onclick': 'alert(\'Pei\')'}, {'text': 'Remove', 'href': '#remove'}]">
     </table>
 </body>
 
 <script src="json2.js" type="text/javascript"></script>
 <script src="jquery-1.7.2.min.js" type="text/javascript"></script>
 <script src="juice.js" type="text/javascript"></script>
+<script src="structure.js" type="text/javascript"></script>
 </html>
