--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
-    <title>Juice - JavaScript UI Component Extension</title>
+    <title>JSUIS - JavaScript UI Simple</title>
     
     <link rel="stylesheet" href="components.css" type="text/css">
 </head>
@@ -24,6 +24,6 @@
 
 <script src="json2.js" type="text/javascript"></script>
 <script src="jquery-1.7.2.min.js" type="text/javascript"></script>
-<script src="juice.js" type="text/javascript"></script>
+<script src="jsuis.js" type="text/javascript"></script>
 <script src="structure.js" type="text/javascript"></script>
 </html>
