When create an element, sync into dom

--- a/plus.html
+++ b/plus.html
@@ -18,6 +18,8 @@
         
         this.width = 100;
         this.height = 100;
+
+        this.sync();
     }
     Field.prototype.show = function() {
         var tempContainer = document.createElement("div");
